tests/snapshots/file@operator@equals.lox.snap
---
source: tests/common/mod.rs
description: "print nil == nil; // expect: true\n\nprint true == true; // expect: true\nprint true == false; // expect: false\n\nprint 1 == 1; // expect: true\nprint 1 == 2; // expect: false\n\nprint \"str\" == \"str\"; // expect: true\nprint \"str\" == \"ing\"; // expect: false\n\nprint nil == false; // expect: false\nprint false == 0; // expect: false\nprint 0 == \"0\"; // expect: false\n"
input_file: test_files/operator/equals.lox
---
OUT: 
true
true
false
true
false
true
false
false
false
false

===
ERR:
