tests/snapshots/file@operator@multiply.lox.snap
---
source: tests/common/mod.rs
description: "print 5 * 3; // expect: 15\nprint 12.34 * 0.3; // expect: 3.702\n"
input_file: crafting_interpreters_test_files/operator/multiply.lox
---
OUT: 
15
3.702

===
ERR:
